@@ -72,6 +72,13 @@
 (dotimes (i 10)
   (test* #`"mysql-fetch-row record #,|i|" `#(,#`",|i|" ,#`"DATA,|i|") (mysql-fetch-row *result*) equal?))
 (test* "mysql-res-closed?/before close" #f (mysql-res-closed? *result*))
+
+(test* "mysql-fetch-field" <mysql-field> (mysql-fetch-field *result*) (lambda (class obj)
+									(eq? class (class-of obj))))
+(test* "mysql-fetch-field" <mysql-field> (mysql-fetch-field *result*) (lambda (class obj)
+									(eq? class (class-of obj))))
+(test* "mysql-fetch-field" #f (mysql-fetch-field *result*))
+
 (test* "mysql-fetch-field-direct" <mysql-field> (let1 field (mysql-fetch-field-direct *result* 0)
 						  (class-of field)))
 (let ((field0 (mysql-fetch-field-direct *result* 0))
@@ -82,14 +89,14 @@
 		       (test* (format "Field #1 Information: ~a" sname) value1 (slot-ref field1 sname) comp))
 		     args))
 	    `((name ,string-ci=? "ID" "DATA")
-;	      (original-name ,string-ci=? "ID" "DATA")
+	      (original-name ,string-ci=? "ID" "DATA")
 	      (table ,string-ci=? "DBD_TEST" "DBD_TEST")
 	      (original-table ,string-ci=? "DBD_TEST" "DBD_TEST")
 	      (db ,(lambda (expected value) (if value
 						(string-ci=? expected value)
 						#t))
 		  "test" "test")
-;	      (catalog ,string=? "def" "def")
+	      (catalog ,string=? "def" "def")
 	      (default-value ,eqv? #f #f)
 	      (length ,= 11 765)
 	      (max-length ,= 1 5)
@@ -102,7 +109,7 @@
 	      (binary? ,eqv? #f #f)
 	      (auto-increment? ,eqv? #f #f)
 	      (decimals ,= 0 0)
-;	      (charset-number ,= 63 33)
+	      (charset-number ,= 63 33)
 	      (type ,= ,MYSQL_TYPE_LONG ,MYSQL_TYPE_VAR_STRING)
 	      )))
 (test* "mysql-free-result" (undefined) (mysql-free-result *result*))
